add  /api/readyhand
